--- a/C-Compiler/mainwindow.ui
+++ b/C-Compiler/mainwindow.ui
@@ -33,7 +33,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="tabWidget">
           <property name="currentIndex">
-           <number>4</number>
+           <number>3</number>
           </property>
           <widget class="QWidget" name="tab_8">
            <attribute name="title">
@@ -71,7 +71,7 @@
            </attribute>
            <layout class="QGridLayout" name="gridLayout_6">
             <item row="0" column="0">
-             <widget class="QTableView" name="tableView_2"/>
+             <widget class="QTableView" name="tableViewRINFL"/>
             </item>
            </layout>
           </widget>
